fix: remove reset on anchor tags

--- a/src/style/_selectable_version.scss
+++ b/src/style/_selectable_version.scss
@@ -11,6 +11,10 @@
 #version-dialog {
     width: 30rem;
     max-height: 45rem;
+
+    a {
+        text-decoration: none;
+    }
 }
 
 #version-dialog-head {
