--- a/src/style/_topnav.scss
+++ b/src/style/_topnav.scss
@@ -38,6 +38,7 @@
         cursor: pointer;
         display: inline-flex;
         padding-bottom: 0.5rem;
+        text-decoration: none;
 
         &,
         &:visited,
