--- a/src/style/_navigation.scss
+++ b/src/style/_navigation.scss
@@ -47,6 +47,7 @@
             color: var(--f-text-color-default);
             padding: 0.5rem calc(0.25rem + var(--highlight-width)) 0.5rem 0.25rem;
             line-height: 1.2;
+            text-decoration: none;
             text-overflow: ellipsis;
             overflow: hidden;
 
