--- a/src/style/site.scss
+++ b/src/style/site.scss
@@ -34,6 +34,10 @@ body {
     --docs-text-color-discrete: var(--docs-header-text-color-discrete);
 }
 
+.page-header__app-name {
+    text-decoration: none;
+}
+
 .sr-only {
     position: absolute;
     width: 1px;
