--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,4 +1,10 @@
-<div class="footer">
-    <!-- prettier-ignore -->
-    {% container "footer" %}
+<div class="docs-footer">
+    <ul class="docs-footer__link-list">
+        <li><a class="anchor" href="{{ 'changelog.html' | relative(doc) }}">Changelog</a></li>
+    </ul>
+
+    <div class="docs-footer__content">
+        <!-- prettier-ignore -->
+        {% container "footer" %}
+    </div>
 </div>
