fix: fix opening links in new tab (broken href attribute)
fixes #190

--- a/templates/macro/menu.html
+++ b/templates/macro/menu.html
@@ -22,9 +22,12 @@
             {% if item.external %}
             target="_blank"
             rel="external"
+            {% endif %}
             {% if item.path.startsWith('/') %}
             data-path="{{ item.path.slice(1) }}"
             {% endif %}
+            {% if item.path.startsWith('./') %}
+            data-path="{{ item.path.slice(2) }}"
             {% endif %}
         >
             {{ item.title }}
