fix: component badges on separate lines instead of a single long line

--- a/templates/component.template.html
+++ b/templates/component.template.html
@@ -13,7 +13,8 @@
             <a href="{{ componentSourceUrl(component) }}">{{ component.name }}</a>
             {% else %} {{ component.name }} {% endif %}
         </code>
-        {% if not loop.last %}, {% endif %} {% endfor %}
+        {% if not loop.last %}<br />
+        {% endif %} {% endfor %}
     </dd>
     {% endif %}
 
