fix: better styling of component badges

--- a/templates/component.template.html
+++ b/templates/component.template.html
@@ -1,24 +1,27 @@
-{% set showAside = true %} {% extends "content-with-menu.template.html" %}
+{% set showAside = true %}
+{% extends "content-with-menu.template.html" %}
 
-<!-- prettier-ignore -->
 {% block aside %}
 <dl>
-    <!-- prettier-ignore -->
     {% if doc.attributes.component %}
     <dt>Komponent</dt>
     <dd>
-        {% for component in doc.attributes.component %}
-        <code>
+        <div class="docs-badge-list">
+            {% for component in doc.attributes.component %}
             {% if componentSourceUrl and componentSourceUrl(component) %}
-            <a href="{{ componentSourceUrl(component) }}">{{ component.name }}</a>
-            {% else %} {{ component.name }} {% endif %}
-        </code>
-        {% if not loop.last %}<br />
-        {% endif %} {% endfor %}
+            <a class="docs-badge docs-badge--component docs-badge-link" href="{{ componentSourceUrl(component) }}">
+                {{ component.name }}
+            </a>
+            {% else %}
+            <div class="docs-badge docs-badge--component">
+                {{ component.name }}
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
     </dd>
     {% endif %}
 
-    <!-- prettier-ignore -->
     {% if doc.attributes.status %}
     <dt>Status</dt>
     <dd>
@@ -28,7 +31,6 @@
 </dl>
 {% endblock %}
 
-<!-- prettier-ignore -->
 {% block content %}
 {{ doc.body | marked }}
 {% endblock %}
