refactor: use a `<template>` for search result

--- a/templates/partials/search-dialog.html
+++ b/templates/partials/search-dialog.html
@@ -20,6 +20,11 @@
             </div>
         </div>
         <div id="search-results"></div>
+        <template id="search-result-template">
+            <li class="list__item">
+                <a class="list__item__itempane"></a>
+            </li>
+        </template>
         <p>{{ $t('search.instructions') }}</p>
     </form>
 </dialog>
