--- a/templates/partials/search-dialog.html
+++ b/templates/partials/search-dialog.html
@@ -22,7 +22,25 @@
         <div id="search-results"></div>
         <template id="search-result-template">
             <li class="list__item">
-                <a class="list__item__itempane"></a>
+                <a class="docs-searchresult list__item__itempane">
+                    <div class="docs-searchresult__type">
+                        <svg focusable="false" class="docs-searchresult__icon" data-type="api">
+                            <title>{{ $t('search.result.api') }}</title>
+                            <use xlink:href="#docs-icon-searchresult-api"></use>
+                        </svg>
+                        <svg focusable="false" class="docs-searchresult__icon" data-type="article">
+                            <title>{{ $t('search.result.article') }}</title>
+                            <use xlink:href="#docs-icon-searchresult-article"></use>
+                        </svg>
+                        <svg focusable="false" class="docs-searchresult__icon" data-type="component">
+                            <title>{{ $t('search.result.component') }}</title>
+                            <use xlink:href="#docs-icon-searchresult-component"></use>
+                        </svg>
+                    </div>
+                    <div class="docs-searchresult__match">
+                        <div class="docs-searchresult__title" data-bind="match"></div>
+                    </div>
+                </a>
             </li>
         </template>
         <p>{{ $t('search.instructions') }}</p>
