feat: new api templates

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -33,6 +33,15 @@ main {
 }
 
 .layout--content-with-menu,
+.layout--api,
+.layout--api--class,
+.layout--api--composable,
+.layout--api--constant,
+.layout--api--enum,
+.layout--api--function,
+.layout--api--interface,
+.layout--api--method,
+.layout--api--type,
 .layout--article,
 .layout--component,
 .layout--pattern {
