--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ site.lang }}" class="layout--{{ doc.template }}" data-root-url="{{ rootUrl(doc) }}">
+<html lang="{{ site.lang }}" class="{{ layoutClass }}" data-root-url="{{ rootUrl(doc) }}">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
