--- a/templates/partials/search-toolbar.html
+++ b/templates/partials/search-toolbar.html
@@ -3,7 +3,7 @@
         <button class="text-field__input" type="submit">
             <svg focusable="false" class="icon button__icon">
                 <use xlink:href="#docs-icon-search"></use></svg
-            >Sök <kbd>ctrl-k</kbd>
+            >{{ $t('search.button') }} <kbd>ctrl-k</kbd>
         </button>
     </form>
 </div>
