--- a/src/style/_skeleton.scss
+++ b/src/style/_skeleton.scss
@@ -26,7 +26,7 @@
         inset: 0;
         position: absolute;
         transform: translateX(-100%);
-        background: linear-gradient(90deg, transparent, hsla(0deg 0% 100% / 30%), transparent);
+        background: linear-gradient(90deg, transparent, hsl(0deg 0% 100% / 30%), transparent);
         pointer-events: none;
 
         @media not (prefers-reduced-motion: reduce) {
