--- a/src/style/site.scss
+++ b/src/style/site.scss
@@ -45,6 +45,6 @@ body {
     margin: -1px;
     padding: 0;
     overflow: hidden;
-    clip: rect(0, 0, 0, 0);
+    clip: rect(0, 0, 0, 0); // stylelint-disable-line property-no-deprecated -- technical debt
     border: 0;
 }
