--- a/src/style/theme/fkui.scss
+++ b/src/style/theme/fkui.scss
@@ -12,6 +12,9 @@
     --docs-header-background-color: var(--fkds-color-background-primary);
     --docs-header-border-color: var(--fkds-color-border-weak);
 
+    // menu
+    --docs-menu-background-color: var(--fkds-color-background-secondary);
+
     // code
     --docs-code-background-color: var(--f-background-code);
 }
