--- a/src/style/theme/fkui.scss
+++ b/src/style/theme/fkui.scss
@@ -17,4 +17,7 @@
 
     // code
     --docs-code-background-color: var(--f-background-code);
+
+    // search
+    --docs-search-border-color: var(--f-border-color-modal);
 }
