--- a/templates/partials/search-toolbar.html
+++ b/templates/partials/search-toolbar.html
@@ -1,9 +1,10 @@
 <div class="toolbar__item">
     <form id="search" role="search">
-        <button class="text-field__input" type="submit">
-            <svg focusable="false" class="icon button__icon">
-                <use xlink:href="#docs-icon-search"></use></svg
-            >{{ $t('search.button') }} <kbd>ctrl-k</kbd>
+        <button type="submit">
+            <svg focusable="false" class="search__icon">
+                <use xlink:href="#docs-icon-search"></use>
+            </svg>
+            {{ $t('search.button') }} <kbd>ctrl-k</kbd>
         </button>
     </form>
 </div>
