--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -32,7 +32,7 @@ p:not(.code-preview p) {
 
 main h1:not(.code-preview h1) {
     font-size: 2.5rem;
-    color: #1b1e23;
+    color: var(--docs-text-color-default);
 }
 
 main h2:not(.code-preview h2) {
