--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -104,7 +104,7 @@ h6 {
 }
 
 #content a:where(:hover:not(.code-preview a, h2 a, h3 a, h4 a, h5 a)) {
-    color: var(--f-text-color-default);
+    color: var(--docs-text-color-default);
     text-decoration-color: var(--docs-text-link-hover);
 }
 
@@ -326,7 +326,7 @@ main #aside dd {
     padding: 0.5rem;
     font-weight: 600;
     line-height: var(--f-line-height-medium);
-    color: var(--f-text-color-default);
+    color: var(--docs-text-color-default);
 }
 
 .code-preview code {
@@ -412,7 +412,7 @@ kbd {
     font-weight: 600;
     font-size: 1.2rem;
     margin-bottom: 1rem;
-    color: var(--f-text-color-default);
+    color: var(--docs-text-color-default);
 }
 
 #search-results {
@@ -424,7 +424,7 @@ kbd {
 
 #search-results a,
 #search-results a:visited {
-    color: var(--f-text-color-default);
+    color: var(--docs-text-color-default);
     text-decoration: none;
 }
 
