fix: fkui variables for navigation

--- a/src/style/theme/fkui.scss
+++ b/src/style/theme/fkui.scss
@@ -62,4 +62,8 @@
     --docs-outline-active-border-color: var(--fkds-color-select-background-secondary-default);
     --docs-outline-heading-color: var(--fkds-color-text-secondary);
     --docs-outline-list-border-color: var(--fkds-color-border-weak);
+
+    // navigation
+    --docs-navigation-hover-color: var(--fkds-color-background-tertiary);
+    --docs-navigation-highlight-color: var(--fkds-color-select-background-secondary-default);
 }
