fix: semantic token for links

--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -98,14 +98,14 @@ h6 {
 #content a:where(:not(.code-preview a, h2 a, h3 a, h4 a, h5 a)) {
     text-decoration: underline;
     text-decoration-thickness: 1px;
-    color: var(--f-text-color-link);
+    color: var(--docs-text-color-link);
     text-decoration-color: var(--docs-text-color-link);
     text-underline-offset: 0.15rem;
-}
 
-#content a:where(:hover:not(.code-preview a, h2 a, h3 a, h4 a, h5 a)) {
-    color: var(--docs-text-color-default);
-    text-decoration-color: var(--docs-text-link-hover);
+    &:hover {
+        color: var(--docs-text-color-default);
+        text-decoration-color: var(--docs-text-color-default);
+    }
 }
 
 .layout-wrapper {
