--- a/src/style/_topnav.scss
+++ b/src/style/_topnav.scss
@@ -1,7 +1,7 @@
 .docs-topnav {
     background-color: var(--docs-topnav-background-color);
-    margin: 0 -0.5rem;
     overflow: hidden;
+    display: inline-block;
 
     &__list {
         display: flex;
