--- a/templates/partials/topnav.html
+++ b/templates/partials/topnav.html
@@ -10,7 +10,7 @@
             <a class="docs-topnav__anchor" href="{{ nav.path | relative(doc) }}"> {{ nav.title }} </a>
         </li>
         {% endif %} {%- endfor -%}
-        <li class="docs-topnav__item docs-topnav__item--more" style="visibility: hidden">
+        <li class="docs-topnav__item docs-topnav__item--more">
             <button type="button" class="docs-topnav__anchor" aria-expanded="false">
                 <span>Mer</span>
                 <svg class="icon" focusable="false" aria-hidden="true">
