--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,14 +1,10 @@
-<div class="page-header__root">
-    <div class="page-header">
-        <a class="page-header__logo" href="{{ './index.html' | relative(doc) }}">
-            <span aria-label="{{ site.name }}" role="img" class="page-header__logo--small"> </span>
-        </a>
-        <a class="page-header__app-name" href="{{ './index.html' | relative(doc) }}"> {{ site.name }} </a>
-        <div class="page-header__right">
-            {%- include "partials/topnav.html" %}
-            <div class="page-header__right-slot">
-                <div class="toolbar">{% container "toolbar" %}</div>
-            </div>
-        </div>
-    </div>
+<a class="docs-header-brand" href="{{ './index.html' | relative(doc) }}" >
+    <span class="docs-header-brand__logo" role="presentation"></span>
+    <span class="docs-header-brand__app-name"> {{ site.name }} </span>
+</a>
+
+<div class="docs-header-nav">{%- include "partials/topnav.html" %}</div>
+
+<div class="docs-header-toolbar">
+    <div class="toolbar">{% container "toolbar" %}</div>
 </div>
