--- a/docs/src/docs-theme.scss
+++ b/docs/src/docs-theme.scss
@@ -1,5 +1,7 @@
+@use "@fkui/theme-default";
 @use "@forsakringskassan/docs-generator/style/core.css";
 @use "@forsakringskassan/docs-generator/style/site.css";
+@use "@forsakringskassan/docs-generator/theme/fkui";
 @use "@forsakringskassan/docs-live-example/dist/main.css";
 
 .mermaid p {
