style: use @fkui/font-default for self docs

--- a/docs/src/docs-theme.scss
+++ b/docs/src/docs-theme.scss
@@ -1,4 +1,7 @@
 @use "@fkui/theme-default";
+@use "@fkui/font-default" with (
+    $asset-path: "./fonts"
+);
 @use "@forsakringskassan/docs-generator/style/core.css";
 @use "@forsakringskassan/docs-generator/style/site.css";
 @use "@forsakringskassan/docs-generator/theme/fkui";
